[gd_scene load_steps=9 format=3 uid="uid://bkhciyfpfpjvu"]

[ext_resource type="Script" uid="uid://dt7otbhan4qdk" path="res://scripts/ui/GameUI.gd" id="1_m9k5p"]
[ext_resource type="Script" uid="uid://dskyssyo3xbyp" path="res://scripts/ui/panels/SurvivalPanel.gd" id="2_survival"]
[ext_resource type="Script" uid="uid://xvhdwrffhywh" path="res://scripts/ui/panels/InventoryPanel.gd" id="3_inventory"]
[ext_resource type="Script" uid="uid://b24cc0fqb0wmy" path="res://scripts/ui/panels/InfoPanel.gd" id="4_info"]
[ext_resource type="Script" uid="uid://bst6i33a7k0d4" path="res://scripts/ui/panels/StatsPanel.gd" id="5_stats"]
[ext_resource type="Script" uid="uid://c4y7vyer5qcn2" path="res://scripts/ui/panels/EquipmentPanel.gd" id="6_equipment"]
[ext_resource type="Script" uid="uid://dj4kg12076t" path="res://scripts/ui/panels/CommandsPanel.gd" id="7_commands"]
[ext_resource type="Script" uid="uid://lb1uhcxttcja" path="res://scripts/ui/panels/LogPanel.gd" id="8_log"]

[node name="GameUI_Layer" type="CanvasLayer"]

[node name="GameUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m9k5p")

[node name="BackgroundColor" type="ColorRect" parent="GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MainLayout" type="MarginContainer" parent="GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ThreeColumnLayout" type="HBoxContainer" parent="GameUI/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LeftPanel" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SurvivalPanel" type="PanelContainer" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel"]
layout_mode = 2
script = ExtResource("2_survival")

[node name="SurvivalVBox" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/SurvivalPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SurvivalTitle" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/SurvivalPanel/SurvivalVBox"]
layout_mode = 2
text = "═══ SOPRAVVIVENZA ═══"
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/SurvivalPanel/SurvivalVBox"]
layout_mode = 2
text = "HP: 100/100"

[node name="FoodLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/SurvivalPanel/SurvivalVBox"]
layout_mode = 2
text = "Sazietà: 100/100"

[node name="WaterLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/SurvivalPanel/SurvivalVBox"]
layout_mode = 2
text = "Idratazione: 100/100"

[node name="StatusLabel" type="RichTextLabel" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/SurvivalPanel/SurvivalVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
bbcode_enabled = true
text = "Status: Normale"
fit_content = true

[node name="InventoryPanel" type="PanelContainer" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_inventory")

[node name="InventoryVBox" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/InventoryPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="InventoryTitle" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/InventoryPanel/InventoryVBox"]
layout_mode = 2
text = "═══ INVENTARIO ═══"
horizontal_alignment = 1

[node name="InventoryScroll" type="ScrollContainer" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/InventoryPanel/InventoryVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryList" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/LeftPanel/InventoryPanel/InventoryVBox/InventoryScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterPanel" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 10

[node name="MapPanel" type="PanelContainer" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapVBox" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel/MapPanel"]
layout_mode = 2

[node name="MapTitle" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel/MapPanel/MapVBox"]
layout_mode = 2
text = "═══ MAPPA DEL MONDO ═══"
horizontal_alignment = 1

[node name="MapDisplay" type="TextureRect" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel/MapPanel/MapVBox"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="WorldViewport" type="SubViewport" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel/MapPanel/MapVBox"]
size = Vector2i(400, 300)
render_target_update_mode = 4

[node name="LogPanel" type="PanelContainer" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("8_log")

[node name="LogVBox" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel/LogPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LogTitle" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel/LogPanel/LogVBox"]
layout_mode = 2
text = "═══ DIARIO DI VIAGGIO ═══"
horizontal_alignment = 1

[node name="LogDisplay" type="RichTextLabel" parent="GameUI/MainLayout/ThreeColumnLayout/CenterPanel/LogPanel/LogVBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="RightPanel" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="InfoPanel" type="PanelContainer" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel"]
layout_mode = 2
script = ExtResource("4_info")

[node name="InfoVBox" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="InfoTitle" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/InfoPanel/InfoVBox"]
layout_mode = 2
text = "═══ INFORMAZIONI ═══"
horizontal_alignment = 1

[node name="PosizioneLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/InfoPanel/InfoVBox"]
layout_mode = 2
text = "Posizione: (0,0)"

[node name="LuogoLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/InfoPanel/InfoVBox"]
layout_mode = 2
text = "Luogo: Pianura"

[node name="OraLabel" type="RichTextLabel" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/InfoPanel/InfoVBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "Ora: 08:00"
fit_content = true

[node name="StatsPanel" type="PanelContainer" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel"]
layout_mode = 2
script = ExtResource("5_stats")

[node name="StatsVBox" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/StatsPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="StatsTitle" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/StatsPanel/StatsVBox"]
layout_mode = 2
text = "═══ STATISTICHE ═══"
horizontal_alignment = 1

[node name="StrengthLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/StatsPanel/StatsVBox"]
layout_mode = 2
text = "Forza: 10"

[node name="AgilityLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/StatsPanel/StatsVBox"]
layout_mode = 2
text = "Agilità: 10"

[node name="IntelligenceLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/StatsPanel/StatsVBox"]
layout_mode = 2
text = "Intelligenza: 10"

[node name="CharismaLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/StatsPanel/StatsVBox"]
layout_mode = 2
text = "Carisma: 10"

[node name="LuckLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/StatsPanel/StatsVBox"]
layout_mode = 2
text = "Fortuna: 10"

[node name="VigoreLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/StatsPanel/StatsVBox"]
layout_mode = 2
text = "Vigore: 10"

[node name="EquipmentPanel" type="PanelContainer" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel"]
layout_mode = 2
script = ExtResource("6_equipment")

[node name="EquipmentVBox" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/EquipmentPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="EquipmentTitle" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/EquipmentPanel/EquipmentVBox"]
layout_mode = 2
text = "═══ EQUIPAGGIAMENTO ═══"
horizontal_alignment = 1

[node name="WeaponLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/EquipmentPanel/EquipmentVBox"]
layout_mode = 2
text = "Arma: Nessuna"

[node name="ArmorLabel" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/EquipmentPanel/EquipmentVBox"]
layout_mode = 2
text = "Armatura: Nessuna"

[node name="CommandsPanel" type="PanelContainer" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("7_commands")

[node name="CommandsVBox" type="VBoxContainer" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/CommandsPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CommandsTitle" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/CommandsPanel/CommandsVBox"]
layout_mode = 2
text = "═══ COMANDI ═══"
horizontal_alignment = 1

[node name="Command1" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/CommandsPanel/CommandsVBox"]
layout_mode = 2
text = "[WASD] Movimento"

[node name="Command2" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/CommandsPanel/CommandsVBox"]
layout_mode = 2
text = "[I] Inventario"

[node name="Command3" type="Label" parent="GameUI/MainLayout/ThreeColumnLayout/RightPanel/CommandsPanel/CommandsVBox"]
layout_mode = 2
text = "[1-9] Usa oggetto"
